--- a/webox-admin/src/components/layout/index.module.css
+++ b/webox-admin/src/components/layout/index.module.css
@@ -2,7 +2,20 @@
   display: flex;
   align-items: center;
   color: #fff;
+  padding: 8px 4px;
 }
 .logo .icon {
-  
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 32px;
+  height: 32px;
+  line-height: 12px;
+  font-weight: bold;
+}
+.logo .title {
+  margin-bottom: 0;
+  font-size: 18px;
+  font-weight: bold;
 }
