--- a/webox-admin/src/components/layout/index.module.css
+++ b/webox-admin/src/components/layout/index.module.css
@@ -19,3 +19,10 @@
   font-size: 18px;
   font-weight: bold;
 }
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 16px 0 0;
+}
