--- a/webox-admin/src/views/banner/components/editForm.module.scss
+++ b/webox-admin/src/views/banner/components/editForm.module.scss
@@ -1,4 +1,6 @@
 .comupload {
-  width: 100%;
-  height: 120px;
+  :global(.ant-upload-select) {
+    padding-bottom: 50%;
+    width: 100% !important;
+  }
 }
