--- a/webox-admin/src/views/demo/editinfo.module.scss
+++ b/webox-admin/src/views/demo/editinfo.module.scss
@@ -33,16 +33,7 @@
 }
 .comupload {
   :global(.ant-upload-select) {
-    position: relative;
     padding-bottom: 50%;
-    :global(.ant-upload) {
-      overflow: hidden;
-      position: absolute;
-      top: 0;
-      left: 0;
-      right: 0;
-      bottom: 0;
-      margin: auto;
-    }
+    width: 100% !important;
   }
 }
