--- a/webox-admin/src/components/Upload/index.module.scss
+++ b/webox-admin/src/components/Upload/index.module.scss
@@ -1,5 +1,14 @@
-.uploader>div {
-  overflow: hidden;
-  width: 100% !important;
-  height: 100% !important;
+.uploader {
+  :global(.ant-upload-select) {
+    position: relative;
+    :global(.ant-upload) {
+      overflow: hidden;
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      margin: auto;
+    }
+  }
 }
